--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@ offering efficient access of genetic variants using the R programming language.<
 <p><a href="http://www.bioconductor.org/packages/devel/bioc/vignettes/SeqArray/inst/doc/SeqArrayTutorial.html">http://www.bioconductor.org/packages/devel/bioc/vignettes/SeqArray/inst/doc/SeqArrayTutorial.html</a></p>
 
 <h2>
+<a id="documents" class="anchor" href="#documents" aria-hidden="true"><span class="octicon octicon-link"></span></a>R Documents</h2>
+
+<p><a href="release/help/00Index.html">R documents in the release branch</a></p>
+
+<p><a href="devel/help/00Index.html">R documents in the develop branch</a></p>
+
+<h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
 
 <ul>
