update help documents

--- a/index.html
+++ b/index.html
@@ -54,18 +54,11 @@ offering efficient access of genetic variants using the R programming language.<
 <p><a href="http://www.bioconductor.org/packages/devel/bioc/html/SeqArray.html">http://www.bioconductor.org/packages/devel/bioc/html/SeqArray.html</a></p>
 
 <h2>
-<a id="tutorials" class="anchor" href="#tutorials" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tutorials</h2>
-
-<p><a href="http://www.bioconductor.org/packages/release/bioc/vignettes/SeqArray/inst/doc/SeqArrayTutorial.pdf">http://www.bioconductor.org/packages/release/bioc/vignettes/SeqArray/inst/doc/SeqArrayTutorial.pdf</a></p>
-
-<p><a href="http://www.bioconductor.org/packages/devel/bioc/vignettes/SeqArray/inst/doc/SeqArrayTutorial.html">http://www.bioconductor.org/packages/devel/bioc/vignettes/SeqArray/inst/doc/SeqArrayTutorial.html</a></p>
-
-<h2>
 <a id="documents" class="anchor" href="#documents" aria-hidden="true"><span class="octicon octicon-link"></span></a>R Documents</h2>
 
-<p><a href="release/help/00Index.html">R documents in the release branch</a></p>
+<p>Release Branch: <a href="release/help/00Index.html">Help Documents</a></p>
 
-<p><a href="devel/help/00Index.html">R documents in the develop branch</a></p>
+<p>Develop Branch: <a href="devel/SeqArrayTutorial.html">Tutorial</a>, <a href="devel/help/00Index.html">Help Documents</a></p>
 
 <h2>
 <a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
