--- a/devel/help/00Index.html
+++ b/devel/help/00Index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<head><title>R: Big Data Management of Genome-wide Sequencing Variants</title>
+<head><title>R: Big Data Management of Genome-Wide Sequencing Variants</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
-<h1> Big Data Management of Genome-wide Sequencing Variants
+<h1> Big Data Management of Genome-Wide Sequencing Variants
 </h1>
 <hr/>
 <div style="text-align: center;">
-</div><h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.9.6</h2>
+</div><h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.9.7</h2>
+
+<ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
+<li><a href="../doc/index.html">User guides, package vignettes and other documentation.</a></li>
+<li><a href="../NEWS">Package NEWS</a>.</li>
+</ul>
 
 <h2>Help Pages</h2>
 
