--- a/devel/help/seqMissing.html
+++ b/devel/help/seqMissing.html
@@ -16,7 +16,7 @@
 <h3>Usage</h3>
 
 <pre>
-seqMissing(gdsfile, per.variant=TRUE)
+seqMissing(gdsfile, per.variant=TRUE, parallel=FALSE)
 </pre>
 
 
@@ -31,6 +31,13 @@ seqMissing(gdsfile, per.variant=TRUE)
 <td>
 <p>missing rate per variant if <code>TRUE</code>, or
 missing rate per sample if <code>FALSE</code></p>
+</td></tr>
+<tr valign="top"><td><code>parallel</code></td>
+<td>
+<p><code>FALSE</code> (serial processing), <code>TRUE</code> (parallel
+processing) or other value; <code>parallel</code> is passed to the argument
+<code>cl</code> in <code><a href="seqParallel.html">seqParallel</a></code>, see <code><a href="seqParallel.html">seqParallel</a></code>
+for more details.</p>
 </td></tr>
 </table>
 
@@ -48,7 +55,8 @@ missing rate per sample if <code>FALSE</code></p>
 
 <h3>See Also</h3>
 
-<p><code><a href="seqOpen.html">seqOpen</a></code>
+<p><code><a href="seqAlleleFreq.html">seqAlleleFreq</a></code>, <code><a href="seqNumAllele.html">seqNumAllele</a></code>,
+<code><a href="seqParallel.html">seqParallel</a></code>
 </p>
 
 
@@ -70,5 +78,5 @@ summary(seqMissing(f, FALSE))
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.6 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
 </body></html>
