--- a/devel/help/seqNumAllele.html
+++ b/devel/help/seqNumAllele.html
@@ -16,7 +16,7 @@
 <h3>Usage</h3>
 
 <pre>
-seqNumAllele(gdsfile)
+seqNumAllele(gdsfile, parallel=FALSE)
 </pre>
 
 
@@ -26,6 +26,13 @@ seqNumAllele(gdsfile)
 <tr valign="top"><td><code>gdsfile</code></td>
 <td>
 <p>a <code><a href="SeqVarGDSClass-class.html">SeqVarGDSClass</a></code> object</p>
+</td></tr>
+<tr valign="top"><td><code>parallel</code></td>
+<td>
+<p><code>FALSE</code> (serial processing), <code>TRUE</code> (parallel
+processing) or other value; <code>parallel</code> is passed to the argument
+<code>cl</code> in <code><a href="seqParallel.html">seqParallel</a></code>, see <code><a href="seqParallel.html">seqParallel</a></code>
+for more details.</p>
 </td></tr>
 </table>
 
@@ -43,7 +50,8 @@ seqNumAllele(gdsfile)
 
 <h3>See Also</h3>
 
-<p><code><a href="seqOpen.html">seqOpen</a></code>
+<p><code><a href="seqAlleleFreq.html">seqAlleleFreq</a></code>, <code><a href="seqMissing.html">seqMissing</a></code>,
+<code><a href="seqParallel.html">seqParallel</a></code>
 </p>
 
 
@@ -63,5 +71,5 @@ table(seqNumAllele(f))
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.6 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
 </body></html>
