upload help document of SeqArray_1.9.13

--- a/devel/help/00Index.html
+++ b/devel/help/00Index.html
@@ -7,14 +7,7 @@
 <h1> Big Data Management of Genome-Wide Sequencing Variants
 </h1>
 <hr/>
-<div style="text-align: center;">
-</div><h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.9.7</h2>
-
-<ul><li><a href="../DESCRIPTION">DESCRIPTION file</a>.</li>
-<li><a href="../doc/index.html">User guides, package vignettes and other documentation.</a></li>
-<li><a href="../NEWS">Package NEWS</a>.</li>
-</ul>
-
+<h2>Documentation for package &lsquo;SeqArray&rsquo; version 1.9.13</h2>
 <h2>Help Pages</h2>
 
 
@@ -34,51 +27,55 @@
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">ref-method</a></td>
 <td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="seqAlleleFreq.html">seqAlleleFreq</a></td>
-<td>Allele frequencies</td></tr>
+<td>Get Allele Frequencies</td></tr>
 <tr><td style="width: 25%;"><a href="seqApply.html">seqApply</a></td>
 <td>Apply Functions Over Array Margins</td></tr>
 <tr><td style="width: 25%;"><a href="SeqArray-package.html">SeqArray</a></td>
 <td>Big Data Management of Genome-wide Sequencing Variants</td></tr>
 <tr><td style="width: 25%;"><a href="seqClose-methods.html">seqClose</a></td>
-<td>Close a SeqArray object</td></tr>
+<td>Close the SeqArray GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqClose-methods.html">seqClose-method</a></td>
-<td>Close a SeqArray object</td></tr>
+<td>Close the SeqArray GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqCompress.Option.html">seqCompress.Option</a></td>
 <td>Compression Options for Importing VCF File(s)</td></tr>
 <tr><td style="width: 25%;"><a href="seqDelete.html">seqDelete</a></td>
-<td>Delete variables in a Sequencing GDS File</td></tr>
+<td>Delete GDS Variables</td></tr>
 <tr><td style="width: 25%;"><a href="seqExampleFileName.html">seqExampleFileName</a></td>
 <td>Example GDS file</td></tr>
+<tr><td style="width: 25%;"><a href="seqExport.html">seqExport</a></td>
+<td>Export to a GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqGDS2SNP.html">seqGDS2SNP</a></td>
-<td>Convert to a SNP GDS file</td></tr>
+<td>Convert to a SNP GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqGDS2VCF.html">seqGDS2VCF</a></td>
-<td>Convert to a VCF file</td></tr>
+<td>Convert to a VCF File</td></tr>
 <tr><td style="width: 25%;"><a href="seqGetData.html">seqGetData</a></td>
-<td>Get Data from a Sequencing GDS file</td></tr>
+<td>Get Data</td></tr>
 <tr><td style="width: 25%;"><a href="seqGetFilter.html">seqGetFilter</a></td>
-<td>Get the Filter of Samples and Variants</td></tr>
+<td>Get the Filter of GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqInfoNewVar.html">seqInfoNewVar</a></td>
-<td>Add a variable to the INFO field</td></tr>
+<td>Add a Variable to the INFO Field</td></tr>
 <tr><td style="width: 25%;"><a href="seqMerge.html">seqMerge</a></td>
-<td>Merge Multiple Sequencing GDS Files</td></tr>
+<td>Merge Multiple Sequence GDS Files</td></tr>
 <tr><td style="width: 25%;"><a href="seqMissing.html">seqMissing</a></td>
 <td>Missing genotype percentage</td></tr>
 <tr><td style="width: 25%;"><a href="seqNumAllele.html">seqNumAllele</a></td>
 <td>Number of alleles</td></tr>
 <tr><td style="width: 25%;"><a href="seqOpen.html">seqOpen</a></td>
-<td>Open a Sequencing GDS File</td></tr>
+<td>Open a Sequence GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqOptimize.html">seqOptimize</a></td>
-<td>Transpose Data Array</td></tr>
+<td>Optimize the Storage of Data Array</td></tr>
 <tr><td style="width: 25%;"><a href="seqParallel.html">seqParallel</a></td>
 <td>Apply Functions in Parallel</td></tr>
+<tr><td style="width: 25%;"><a href="seqParallelSetup.html">seqParallelSetup</a></td>
+<td>Setup a Parallel Environment</td></tr>
 <tr><td style="width: 25%;"><a href="seqSetFilter.html">seqSetFilter</a></td>
-<td>Set a filter to sample or variant</td></tr>
+<td>Set a Filter to Sample or Variant</td></tr>
 <tr><td style="width: 25%;"><a href="seqSetFilterChrom.html">seqSetFilterChrom</a></td>
-<td>Chromosome selection</td></tr>
+<td>Chromosome Selection</td></tr>
 <tr><td style="width: 25%;"><a href="seqSlidingWindow.html">seqSlidingWindow</a></td>
-<td>Apply functions via a sliding window over variants</td></tr>
+<td>Apply Functions via a Sliding Window Over Variants</td></tr>
 <tr><td style="width: 25%;"><a href="seqSummary.html">seqSummary</a></td>
-<td>Get the summary of a GDS file</td></tr>
+<td>Summarize the Sequence GDS File</td></tr>
 <tr><td style="width: 25%;"><a href="seqTranspose.html">seqTranspose</a></td>
 <td>Transpose Data Array</td></tr>
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">SeqVarGDSClass</a></td>
@@ -86,10 +83,10 @@
 <tr><td style="width: 25%;"><a href="SeqVarGDSClass-class.html">SeqVarGDSClass-class</a></td>
 <td>SeqVarGDSClass</td></tr>
 <tr><td style="width: 25%;"><a href="seqVCF.Header.html">seqVCF.Header</a></td>
-<td>Parse the header of a VCF file</td></tr>
+<td>Parse the Header of a VCF File</td></tr>
 <tr><td style="width: 25%;"><a href="seqVCF.SampID.html">seqVCF.SampID</a></td>
-<td>Get the sample IDs of a VCF file</td></tr>
+<td>Get the Sample IDs</td></tr>
 <tr><td style="width: 25%;"><a href="seqVCF2GDS.html">seqVCF2GDS</a></td>
-<td>Reformat VCF files</td></tr>
+<td>Reformat VCF Files</td></tr>
 </table>
 </body></html>
