--- a/devel/help/seqInfoNewVar.html
+++ b/devel/help/seqInfoNewVar.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Add a variable to the INFO field</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Add a Variable to the INFO Field</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqInfoNewVar {SeqArray}"><tr><td>seqInfoNewVar {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Add a variable to the INFO field</h2>
+<h2>Add a Variable to the INFO Field</h2>
 
 <h3>Description</h3>
 
-<p>Add a new variable to the INFO field in the specified GDS file.
+<p>Adds a new variable to the INFO field in the specified GDS file.
 </p>
 
 
@@ -98,7 +98,7 @@ variable defined with 'Type=Flag' in the VCF format.
 <h3>Examples</h3>
 
 <pre>
-# the file of GDS
+# the GDS file
 gds.fn &lt;- seqExampleFileName("gds")
 
 file.copy(gds.fn, "test.gds", overwrite=TRUE)
@@ -172,5 +172,5 @@ unlink("test.gds", force=TRUE)
 unlink("test.vcf.gz", force=TRUE)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
 </body></html>
