--- a/devel/help/seqMerge.html
+++ b/devel/help/seqMerge.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Merge Multiple Sequencing GDS Files</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Merge Multiple Sequence GDS Files</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqMerge {SeqArray}"><tr><td>seqMerge {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Merge Multiple Sequencing GDS Files</h2>
+<h2>Merge Multiple Sequence GDS Files</h2>
 
 <h3>Description</h3>
 
-<p>Merge multiple sequencing GDS files.
+<p>Merges multiple sequence GDS files.
 </p>
 
 
@@ -68,5 +68,5 @@ data only without any annotation. Users can specify multiple VCF files in
 <p><code><a href="seqVCF2GDS.html">seqVCF2GDS</a></code>
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
 </body></html>
