--- a/devel/help/seqSetFilter.html
+++ b/devel/help/seqSetFilter.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Set a filter to sample or variant</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Set a Filter to Sample or Variant</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqSetFilter {SeqArray}"><tr><td>seqSetFilter {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Set a filter to sample or variant</h2>
+<h2>Set a Filter to Sample or Variant</h2>
 
 <h3>Description</h3>
 
-<p>Set a filter to sample and/or variant.
+<p>Sets a filter to sample and/or variant.
 </p>
 
 
@@ -91,9 +91,8 @@ and/or variants;
 <h3>Examples</h3>
 
 <pre>
-# the file of GDS
-gds.fn &lt;- seqExampleFileName("gds")
-# or gds.fn &lt;- "C:/YourFolder/Your_GDS_File.gds"
+# the GDS file
+(gds.fn &lt;- seqExampleFileName("gds"))
 
 # display
 (f &lt;- seqOpen(gds.fn))
@@ -139,5 +138,5 @@ seqSummary(f, "genotype", check="none")
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
 </body></html>
