--- a/devel/help/seqSummary.html
+++ b/devel/help/seqSummary.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Get the summary of a GDS file</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Summarize the Sequence GDS File</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqSummary {SeqArray}"><tr><td>seqSummary {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Get the summary of a GDS file</h2>
+<h2>Summarize the Sequence GDS File</h2>
 
 <h3>Description</h3>
 
-<p>Get the summary of a sequencing GDS file.
+<p>Gets the summary of sequence GDS file.
 </p>
 
 
@@ -121,16 +121,15 @@ seldim[2] &ndash; the number of selected variants</p>
 <h3>Examples</h3>
 
 <pre>
+# the GDS file
 (gds.fn &lt;- seqExampleFileName("gds"))
-# or gds.fn &lt;- "C:/YourFolder/Your_GDS_File.gds"
 
 seqSummary(gds.fn)
 
 seqSummary(gds.fn, "genotype")
 
 
-######################################################
-# display
+# open a GDS file
 f &lt;- seqOpen(gds.fn)
 
 # get 'sample.id
@@ -149,5 +148,5 @@ seqSummary(f, "genotype")
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
 </body></html>
