--- a/devel/help/seqClose-methods.html
+++ b/devel/help/seqClose-methods.html
@@ -1,15 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Close a SeqArray object</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Close the SeqArray GDS File</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqClose-methods {SeqArray}"><tr><td>seqClose-methods {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Close a SeqArray object</h2>
+<h2>Close the SeqArray GDS File</h2>
 
 <h3>Description</h3>
 
-<p>Close a SeqArray file or object</p>
+<p>Closes a sequence GDS file.
+</p>
 
 
 <h3>Usage</h3>
@@ -36,7 +37,7 @@ seqClose(object)
 </p>
 
 <ul>
-<li><p><code><a href="SeqVarGDSClass-class.html">SeqVarGDSClass</a></code>, close the sequencing GDS file.
+<li><p><code><a href="SeqVarGDSClass-class.html">SeqVarGDSClass</a></code>, close the sequence GDS file.
 </p>
 </li></ul>
 
@@ -58,5 +59,5 @@ seqClose(object)
 <p><code><a href="seqOpen.html">seqOpen</a></code>
 </p>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
 </body></html>
