--- a/devel/help/seqCompress.Option.html
+++ b/devel/help/seqCompress.Option.html
@@ -9,7 +9,7 @@
 
 <h3>Description</h3>
 
-<p>Get compression options for importing VCF file(s).
+<p>Gets compression options for importing VCF file(s).
 </p>
 
 
@@ -75,5 +75,5 @@ seqClose(f2)
 unlink(c("tmp1.gds", "tmp2.gds"))
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
 </body></html>
