--- a/devel/help/seqDelete.html
+++ b/devel/help/seqDelete.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Delete variables in a Sequencing GDS File</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Delete GDS Variables</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqDelete {SeqArray}"><tr><td>seqDelete {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Delete variables in a Sequencing GDS File</h2>
+<h2>Delete GDS Variables</h2>
 
 <h3>Description</h3>
 
-<p>Delete variables in a sequencing GDS file.
+<p>Deletes variables in the sequence GDS file.
 </p>
 
 
@@ -89,5 +89,5 @@ cleanup.gds("tmp.gds")
 unlink("tmp", force=TRUE)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
 </body></html>
