--- a/devel/help/seqMissing.html
+++ b/devel/help/seqMissing.html
@@ -9,14 +9,15 @@
 
 <h3>Description</h3>
 
-<p>Calculate the missing rates per variant or per sample.
+<p>Calculates the missing rates per variant or per sample.
 </p>
 
 
 <h3>Usage</h3>
 
 <pre>
-seqMissing(gdsfile, per.variant=TRUE, parallel=FALSE)
+seqMissing(gdsfile, per.variant=TRUE,
+    parallel=getOption("seqarray.parallel", FALSE))
 </pre>
 
 
@@ -63,9 +64,8 @@ for more details.</p>
 <h3>Examples</h3>
 
 <pre>
-# the file of GDS
-gds.fn &lt;- seqExampleFileName("gds")
-# or gds.fn &lt;- "C:/YourFolder/Your_GDS_File.gds"
+# the GDS file
+(gds.fn &lt;- seqExampleFileName("gds"))
 
 # display
 (f &lt;- seqOpen(gds.fn))
@@ -78,5 +78,5 @@ summary(seqMissing(f, FALSE))
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
 </body></html>
