--- a/devel/help/seqOptimize.html
+++ b/devel/help/seqOptimize.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Transpose Data Array</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Optimize the Storage of Data Array</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqOptimize {SeqArray}"><tr><td>seqOptimize {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Transpose Data Array</h2>
+<h2>Optimize the Storage of Data Array</h2>
 
 <h3>Description</h3>
 
@@ -92,8 +92,10 @@ seqOptimize("tmp.gds", target="by.sample")
 # close
 seqClose(f)
 
+
+# delete the temporary file
 unlink("tmp.gds")
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
 </body></html>
