--- a/devel/help/seqParallel.html
+++ b/devel/help/seqParallel.html
@@ -9,7 +9,7 @@
 
 <h3>Description</h3>
 
-<p>Apply a user-defined function in parallel.
+<p>Applies a user-defined function in parallel.
 </p>
 
 
@@ -71,9 +71,9 @@ to the second argument of <code>FUN(gdsfile, selection, ...)</code></p>
 
 <p>When <code>cl</code> is <code>TRUE</code> or a numeric value, forking techniques are
 used to create a new child process as a copy of the current R process, see
-<code><a href="../../parallel/html/mcfork.html">mcfork</a></code>. However, forking is not available on Windows, so serial
-processing is used instead. In order to use multiple processes on Windows,
-users have to create a cluster object via <code><a href="../../parallel/html/makeCluster.html">makeCluster</a></code>.
+<code>?parallel::mcfork</code>. However, forking is not available on Windows, so
+serial processing is used instead. In order to use multiple processes on
+Windows, users have to create a cluster object via <code><a href="../../parallel/html/makeCluster.html">makeCluster</a></code>.
 </p>
 
 
@@ -104,9 +104,8 @@ library(parallel)
 cl &lt;- makeCluster(getOption("cl.cores", 2))
 
 
-# the file of GDS
-gds.fn &lt;- seqExampleFileName("gds")
-# or gds.fn &lt;- "C:/YourFolder/Your_GDS_File.gds"
+# the GDS file
+(gds.fn &lt;- seqExampleFileName("gds"))
 
 # display
 (f &lt;- seqOpen(gds.fn))
@@ -153,5 +152,5 @@ stopCluster(cl)
 seqClose(f)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
 </body></html>
