--- a/devel/help/seqTranspose.html
+++ b/devel/help/seqTranspose.html
@@ -71,9 +71,8 @@ provided in the future version.
 <h3>Examples</h3>
 
 <pre>
-# the file name of VCF
+# the VCF file
 (vcf.fn &lt;- seqExampleFileName("vcf"))
-# or vcf.fn &lt;- "C:/YourFolder/Your_VCF_File.vcf"
 
 # convert
 seqVCF2GDS(vcf.fn, "tmp.gds")
@@ -92,8 +91,10 @@ index.gdsn(f, "genotype/~data")
 
 # close
 seqClose(f)
+
+# delete the temporary file
 unlink("tmp.gds")
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
 </body></html>
