--- a/devel/help/seqVCF.Header.html
+++ b/devel/help/seqVCF.Header.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Parse the header of a VCF file</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Parse the Header of a VCF File</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqVCF.Header {SeqArray}"><tr><td>seqVCF.Header {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Parse the header of a VCF file</h2>
+<h2>Parse the Header of a VCF File</h2>
 
 <h3>Description</h3>
 
-<p>Parse the header of a VCF file.
+<p>Parses the header of a VCF file.
 </p>
 
 
@@ -107,7 +107,7 @@ Bioinformatics. 2011 Aug 1;27(15):2156-8. Epub 2011 Jun 7.
 <h3>Examples</h3>
 
 <pre>
-# the file name of VCF
+# the VCF file
 (vcf.fn &lt;- seqExampleFileName("vcf"))
 # or vcf.fn &lt;- "C:/YourFolder/Your_VCF_File.vcf"
 
@@ -115,5 +115,5 @@ Bioinformatics. 2011 Aug 1;27(15):2156-8. Epub 2011 Jun 7.
 seqVCF.Header(vcf.fn)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
 </body></html>
