--- a/devel/help/seqVCF.SampID.html
+++ b/devel/help/seqVCF.SampID.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Get the sample IDs of a VCF file</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head><title>R: Get the Sample IDs</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="stylesheet" type="text/css" href="R.css" />
 </head><body>
 
 <table width="100%" summary="page for seqVCF.SampID {SeqArray}"><tr><td>seqVCF.SampID {SeqArray}</td><td style="text-align: right;">R Documentation</td></tr></table>
 
-<h2>Get the sample IDs of a VCF file</h2>
+<h2>Get the Sample IDs</h2>
 
 <h3>Description</h3>
 
-<p>Return the sample IDs of a VCF file.
+<p>Returns the sample IDs of a VCF file.
 </p>
 
 
@@ -54,13 +54,12 @@ Bioinformatics. 2011 Aug 1;27(15):2156-8. Epub 2011 Jun 7.
 <h3>Examples</h3>
 
 <pre>
-# the file name of VCF
+# the VCF file
 (vcf.fn &lt;- seqExampleFileName("vcf"))
-# or vcf.fn &lt;- "C:/YourFolder/Your_VCF_File.vcf"
 
 # get sample id
 seqVCF.SampID(vcf.fn)
 </pre>
 
-<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.7 <a href="00Index.html">Index</a>]</div>
+<hr /><div style="text-align: center;">[Package <em>SeqArray</em> version 1.9.13 <a href="00Index.html">Index</a>]</div>
 </body></html>
